--- a/frontend-user/package.json
+++ b/frontend-user/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "next": "latest",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0"
